--- a/redo-stack-based-mem-corruption.html
+++ b/redo-stack-based-mem-corruption.html
@@ -193,14 +193,28 @@
                     <h2>Detecting buffer overflows on the stack </h2>
                     <hr>
                     <p class="lead section-lead">Section Summary:</p>
-                    <p class="section-lead">Also referred to as a stack cookie, a canary is a randomly generated 4-byte value (8-byte on 64 bit systems) that is placed in a stack frame directly on top of a buffer. The canary value is generated at run time and moved to the stack immediately after the function prologue. When said function is about to return, the canary value is validated for any corruption. If the canary value has been modified, then the function will not return, but instead invoke an exception handler. The security that stack canaries provide is dependent on the fact that overflowing a buffer overwrites all data on the stack in between the end of the buffer and the end of the overflow. Since the canary is placed directly at the end of the buffer, even a single-byte overflow will overwrite the first byte of the canary.</p>
+                    <p class="section-lead">Also referred to as a stack cookie, a canary is a randomly generated 4-byte value (8-byte on 64 bit systems) that is placed in a stack frame directly on top of a buffer. The canary value is generated at run time and moved to the stack immediately after the function prologue. When said function is about to return, the canary value is validated for any corruption. If the canary value has been modified, then the function will not return, but instead invoke an exception handler. The security that stack canaries provide is dependent on the fact that overflowing a buffer overwrites all data on the stack in between the end of the buffer and the end of the overflow. Since the canary is placed directly at the end of the buffer, even a single-byte overflow will overwrite the first byte of the canary.<br>
+                    Throughout this section we will be building off of a simple example program and modifying it each step of the way. The example programs will attempt to implement their own stack canary in order to protect important data on the stack. Eventually we’ll create a secure stack canary implementation and analyze in what scenarios even a secure canary implementation can be bypassed.</p>
                     <hr>
                     <p class="lead section-lead">Index:<br>
-                    <li><a href="#Mimicing">Mimicing a Stack Canary</a></li>
+                    <li><a href="#canary1">Canary Example 1: The Vulnerable Program</li>
+                    <li><a href="#Mimicing">Canary Example 2: Mimicing a Stack Canary</a></li>
                     <li><a href="#Stack-Protector">GCC's Stack-Protector</a></li>
                     <li><a href="#BypassingCanaries">Bypassing Stack Canaries</a></li>
                     </p>
                     <hr>
+                    <p id="canary1" class="lead section-lead"><b>Canary Example 1: The Vulnerable Program</b></p>
+                    <p class="section-paragraph">Displayed in the next figure is the source code for our first example program; canary1. The example program uses two functions (on lines 25 and 37) that are not defined within the source file but are instead defined in a different source file and compiled as a static library in the canary1 binary file:
+
+                    <script src="https://gist.github.com/jbrodnax/ddd8ba2ca6b50be29825055c840ac99c.js"></script>
+
+                    In the next figure are the function definitions for success and secure_login:
+
+                    <script src="https://gist.github.com/jbrodnax/81bcc72a7ddd75047634f97ecd01e27d.js"></script>
+
+                    The reason for defining these functions in a source file of their own is mainly for organization's sake. These functions are used in every example program in this section and are never changed. It seemed impractical to eat up visual space when displaying the source code of each example with redundant function definitions. However, if you’re compiling the example programs on your own system, the resulting binary will be the same whether you statically link the success and secure_login functions or define them all in one source file.<br>
+                    This example is actually void of a canary but has a blatant buffer overflow vulnerability stemming from line 19’s fgets call. This buffer overflow would allow a user to corrupt the login_status variable resulting in an unintended successful login.</p>
+
                     <p id="Mimicing" class="lead section-lead"><b>Mimicing a Stack Canary:</b></p>
                     <p class="section-paragraph">
                     We can modify the previous buffer overflow example program to mimic a stack canary:</p>
