--- a/redo-stack-based-mem-corruption.html
+++ b/redo-stack-based-mem-corruption.html
@@ -163,7 +163,9 @@
                     <br><br>
                     <script src="https://gist.github.com/jbrodnax/1c85139b617d0c53598836bc97b93aa2.js"></script>
                     <p>figure5</p>
-
+                    <br>
+                    <script src="https://gist.github.com/jbrodnax/f040dcbcd1b57999f1f0ffaad56003d4.js"></script>
+                    <br>
                     <p class="section-paragraph">In <i>func1</i> we have allocated a 32-byte buffer on the stack with the variable named <i>buf</i>. A call to Libc’s <i>fgets</i> function is then used to read a maximum of 64 bytes of data into <i>buf</i>. If fgets <i>fails</i> to read any data from stdin (unfamiliar with stdin or standard streams in general? Here’s a helpful link: <a href="http://bfy.tw/AoYs">Standard Streams</a>) then a NULL pointer is returned, in which case, the error variable is set to 1 and returned. Otherwise, error remains equal to 0 when returned. In this example program, we are interested in the fact that <i>fgets</i> has a size parameter of 64, but is reading data from stdin into a buffer of size 32. This means that we can overflow the buffer by 64 - 32 = 32 bytes. If we feed some ‘A’s as input to the program, this is what the stack segment will look like right after fgets returns but right before <i>func1</i> returns:
                     <br><br>
                     <i>*Note: main’s stack-frame is colored blue and func1’s is colored green.</i></p>
