--- a/redo-stack-based-mem-corruption.html
+++ b/redo-stack-based-mem-corruption.html
@@ -98,7 +98,7 @@
                     <h2>Basics of the virtual address space and its segments</h2>
                     <hr>
                     <p class="lead section-lead">Index:<br>
-                    <li><a href="#VASpace">Virtual Address Space of Linux Processes</a></li>
+                    <li><a href="#VASpace">The Linux Virtual Address Space</a></li>
                     <li><a href="#StackSegment">The Stack Segment</a></li>
                     <li><a href="#ClassicStackBufferOverflow">A Classic Stack-Buffer Overflow</a></li>
                     </p>                   
@@ -109,7 +109,7 @@
                     <br><br><br><br>
 
                     <div id="VASpace">
-                    <p class="lead section-lead"><b>Virtual Address Space of Linux Processes:</b></p>
+                    <h2> > The Linux Virtual Address Space</h2>
                     </div>
                     <hr>
 
@@ -144,7 +144,7 @@
                     <br><br><br><br>
 
                     <div id="StackSegment">
-                    <p class="lead section-lead"><b>Stack Segment: </b></p>
+                    <h2> > The Stack Segment</h2>
                     </div>
                     <hr>
 
@@ -166,9 +166,9 @@
                     <p class="section-lead">The light-gray boxes represent main()’s stack frame, and the lower green boxes represent foo1()’s stack frame (RET denotes the Return Address).</p>
                     <hr>
                     <br><br><br><br>
-                    
+
                     <div id="ClassicStackBufferOverflow">
-                    <p class="lead section-lead"><b>Classic Stack-Buffer Overflow</b></p>
+                    <h2> > Classic Stack-Buffer Overflow</h2>
                     </div>
                     <hr>
                     
